@@ -60,7 +60,7 @@ namespace CIAO_SharedDP_SharedDPComponent_Impl
             CIAO_SharedDP_Connector1_SharedDPTest1Connector_DDS_Event_Impl::SharedDPTest1_DDS_Traits,
             CIAO_SharedDP_Connector1_SharedDPTest1Connector_DDS_Event_Impl::DDS_DDS_Event_Traits> DataWriter_type;
 
-        DataWriter_type * typed_ccm_dw = dynamic_cast <DataWriter_type *> (dw1.in ());
+        DataWriter_type * typed_ccm_dw = reinterpret_cast <DataWriter_type *> (dw1.in ());
         if (typed_ccm_dw)
           {
             DDSDataWriter * dds_dw1 = typed_ccm_dw->get_impl ();
@@ -94,7 +94,7 @@ namespace CIAO_SharedDP_SharedDPComponent_Impl
             CIAO_SharedDP_Connector2_SharedDPTest2Connector_DDS_Event_Impl::SharedDPTest2_DDS_Traits,
             CIAO_SharedDP_Connector2_SharedDPTest2Connector_DDS_Event_Impl::DDS_DDS_Event_Traits> DataWriter_type;
 
-        DataWriter_type * typed_ccm_dw = dynamic_cast <DataWriter_type *> (dw2.in ());
+        DataWriter_type * typed_ccm_dw = reinterpret_cast <DataWriter_type *> (dw2.in ());
         if (typed_ccm_dw)
           {
             DDSDataWriter * dds_dw2 = typed_ccm_dw->get_impl ();
@@ -128,7 +128,7 @@ namespace CIAO_SharedDP_SharedDPComponent_Impl
             CIAO_SharedDP_Connector3_SharedDPTest3Connector_DDS_Event_Impl::SharedDPTest3_DDS_Traits,
             CIAO_SharedDP_Connector3_SharedDPTest3Connector_DDS_Event_Impl::DDS_DDS_Event_Traits> DataWriter_type;
 
-        DataWriter_type * typed_ccm_dw = dynamic_cast <DataWriter_type *> (dw3.in ());
+        DataWriter_type * typed_ccm_dw = reinterpret_cast <DataWriter_type *> (dw3.in ());
         if (typed_ccm_dw)
           {
             DDSDataWriter * dds_dw3 = typed_ccm_dw->get_impl ();
